Wed Nov 17 13:04:52 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/impl/DDS_Subscriber_Base_T.cpp:
        * connectors/dds4ccm/impl/Writer_T.cpp:
        * connectors/dds4ccm/impl/ndds/DataReader_T.h:
        * connectors/dds4ccm/impl/ndds/DataReader_T.cpp:
        * connectors/dds4ccm/impl/ndds/DataWriter_T.h:
        * connectors/dds4ccm/impl/ndds/DataWriter_T.cpp:
        * connectors/dds4ccm/impl/ndds/Publisher.cpp:
        * connectors/dds4ccm/impl/ndds/PublisherListener.cpp:
        * connectors/dds4ccm/impl/ndds/Subscriber.cpp:
        * connectors/dds4ccm/impl/ndds/SubscriberListener.cpp:
        * connectors/dds4ccm/impl/ndds/TypeSupport.h:
        * connectors/dds4ccm/impl/ndds/TypeSupport.cpp:
          Store the publisher and subscriber as class members in the DataWriter
          and DataReader.

Wed Nov 17 12:48:18 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * MPC/config/dds4ccm_ts_default.mpb:
          Disable all projects derived from this when no dds vendor is enabled

Wed Nov 17 11:15:15 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/InstanceHandle/Sender/Writer_Sender_exec.cpp:
          Resolved runtime casting errors.

Wed Nov 17 11:04:42 UTC 2010  Marijke Hengstmengel  <mhengstmengel@remedy.nl>

        * connectors/tests/AMIDDS/Base/AmiDds_Base.idl:
        * connectors/ami4ccm/tests/Exceptions/Sender/ExceptionT_Sender.mpc:
        * connectors/ami4ccm/tests/Exceptions/Sender/ExceptionT_Sender_exec.cpp:
        * connectors/ami4ccm/tests/Exceptions/Sender/ExceptionT_Sender_exec.h:
        * connectors/ami4ccm/tests/Exceptions/Sender/ExceptionTA_conn_i.cpp:
        * connectors/ami4ccm/tests/Exceptions/Sender/ExceptionTA_conn_ih:
        * connectors/ami4ccm/tests/InterInArgs/Sender/InterInArgsTA_conn_icpp:
        * connectors/ami4ccm/tests/InterInArgs/Sender/InterInArgsTA_conn_ih:
        * connectors/ami4ccm/tests/DelRplyH/Sender/DelRplyHA_conn_i.cpp: