@@ -31,7 +31,8 @@ DDS_Update_T<CCM_TYPE, TYPED_WRITER, VALUE_TYPE, SEQ_VALUE_TYPE>::configuration_
   const char* profile_name)
 {
   DDS4CCM_TRACE ("DDS_Update_T<CCM_TYPE, TYPED_WRITER, VALUE_TYPE, SEQ_VALUE_TYPE>::configuration_complete");
-  if (::CORBA::is_nil (this->dds_update_->get_dds_writer ()))
+  ::DDS::DataWriter_var dw = this->dds_update_->get_dds_writer ();
+  if (::CORBA::is_nil (dw.in ()))
     {
       ::DDS::DataWriter_var dwv_tmp;
       if (library_name && profile_name)
